# worldbank-elt-pipeline

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: worldbank_elt.py
dbt_worldbank/: dbt_project.yml  profiles.yml
dbt_worldbank/models/marts/: _marts.yml  dim_country.sql  dim_indicador.sql  dim_indicator.sql  dim_pais.sql  fact_indicator_value.sql  hechos_valor_indicador.sql
dbt_worldbank/models/staging/: _sources.yml  _staging.yml  stg_countries.sql  stg_indicator_values.sql  stg_paises.sql  stg_valores_indicador.sql
dbt_worldbank/seeds/: indicadores.csv  indicators.csv
docs/: consultas_ejemplo.sql  example_queries.sql
docs/superpowers/plans/: 2026-06-14-elt-orchestrated.md
docs/superpowers/specs/: 2026-06-14-elt-orchestrated-design.md
load/: postgres_loader.py
pipelines/: run_el.py
tests/: test_client.py  test_loader.py  test_models.py
worldbank_extractor/: client.py  models.py
