[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldbank-elt-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "psycopg[binary]>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25", "ruff>=0.5", "dbt-core~=1.9.0", "dbt-postgres~=1.9.0"]

[tool.setuptools]
packages = ["worldbank_extractor", "load"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
